feat: add idempotency for newsletters post

--- a/src/routes/admin/newsletter.html
+++ b/src/routes/admin/newsletter.html
@@ -19,8 +19,10 @@
       <textarea id="text_content" name="text_content" rows="4" cols="50">
       </textarea>
 
+      <input hidden type="text" name="idempotency_key" value="{}">
+
       <br/><br/>
-      <button type="submit">Submit</button>
+      <button type="submit">Publish</button>
     </form>
   </body>
 </html>
